# amake

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml  doxygen.yml
example/: build.amake  install.amake  main.cpp
